💄 FIx home top gap.

--- a/_sass/_home.sass
+++ b/_sass/_home.sass
@@ -2,6 +2,10 @@ section
     .content
         padding: 50pt 0 50pt 0
 
+#part-1
+    .content
+        padding-top: 10pt
+
 #part-2
     background-color: $primary-color
     color: $on-primary-color
